@@ -492,7 +492,6 @@ def send_to_device(ident, cmd):
                 elif "restart_gps" == cmd:
                     client.restart_gps()
                 elif "set_pin" in cmd:
-                    print(len(cmd_arr))
                     if len(cmd_arr) >= 3:
                         try:
                             pin = int(cmd_arr[1])
@@ -500,7 +499,17 @@ def send_to_device(ident, cmd):
                             client.set_output(pin, state)
                         except ValueError as _:
                             pass
-
+                elif "set_snapshot" in cmd:
+                    if len(cmd_arr) >= 6:
+                        try:
+                            event_code = int(cmd_arr[1])
+                            interval = int(cmd_arr[2])
+                            count = int(cmd_arr[3])
+                            upload = int(cmd_arr[4])
+                            delete = int(cmd_arr[5])
+                            client.set_snapshot_parameters(event_code, interval, count, upload, delete)
+                        except ValueError as _:
+                            pass
                 elif "debug" == cmd:
                     client.debug = not client.debug
                     logger.info("Debug mode for ident %s is now %s", ident, str(client.debug))
